Adding centrality scripts and commenting featureset notebook

--- a/graph_database/graph_peak_featureset.ipynb
+++ b/graph_database/graph_peak_featureset.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## This notebook will construct the nodes and edges that we will build our graph with"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Import relevant libraries and import raw data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -23,22 +37,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[1], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m widths \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m      3\u001b[0m prom \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m----> 5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m _, group \u001b[38;5;129;01min\u001b[39;00m \u001b[43mdf\u001b[49m\u001b[38;5;241m.\u001b[39mgroupby(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSpecID\u001b[39m\u001b[38;5;124m'\u001b[39m):\n\u001b[0;32m      6\u001b[0m     peak_index, weights \u001b[38;5;241m=\u001b[39m find_peaks(x\u001b[38;5;241m=\u001b[39mgroup[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAbsorbance\u001b[39m\u001b[38;5;124m'\u001b[39m], prominence\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m75\u001b[39m, width\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m6\u001b[39m)\n\u001b[0;32m      7\u001b[0m     peaks \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(group\u001b[38;5;241m.\u001b[39miloc[peak_index]\u001b[38;5;241m.\u001b[39mindex\u001b[38;5;241m.\u001b[39mvalues)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
-     ]
-    }
-   ],
+   "source": [
+    "Here we use scipy's function \"find_peaks\" to find all peaks in each individual spectra sample as well as pulling featurse such as prominence and width of peaks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "peaks = []\n",
     "widths = []\n",
@@ -89,6 +98,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Below shows a scatterplot of the coordinates of all the peaks we have found"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -119,6 +135,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We then add the peak information to our main dataframe"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
@@ -127,13 +150,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\stang\\AppData\\Local\\Temp\\ipykernel_7420\\2901317241.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_5766/2901317241.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  peak_df['Widths'] = widths\n",
-      "C:\\Users\\stang\\AppData\\Local\\Temp\\ipykernel_7420\\2901317241.py:3: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_5766/2901317241.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -351,6 +374,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We then use the function to assign each peak we have found to a grid slot. We have speicified the slot sizes as they give a meaningful overlap to build our graph"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -373,7 +403,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\stang\\AppData\\Local\\Temp\\ipykernel_7420\\3240670544.py:5: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_5766/3240670544.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -412,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -437,98 +467,111 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>SpecID</th>\n",
+       "      <th>Seq</th>\n",
        "      <th>WaveNumber</th>\n",
        "      <th>Absorbance</th>\n",
+       "      <th>SurID</th>\n",
        "      <th>Status</th>\n",
        "      <th>Widths</th>\n",
        "      <th>Prominences</th>\n",
        "      <th>GridSlot</th>\n",
-       "      <th>Node_ID</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>613</th>\n",
        "      <td>201210-1-00</td>\n",
+       "      <td>613</td>\n",
        "      <td>618.90662</td>\n",
        "      <td>1842.5710</td>\n",
+       "      <td>201210-1</td>\n",
        "      <td>Normal</td>\n",
        "      <td>57.732793</td>\n",
        "      <td>181.9741</td>\n",
        "      <td>(12, 1)</td>\n",
-       "      <td>613</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>727</th>\n",
        "      <td>201210-1-00</td>\n",
+       "      <td>727</td>\n",
        "      <td>696.81091</td>\n",
        "      <td>1851.9185</td>\n",
+       "      <td>201210-1</td>\n",
        "      <td>Normal</td>\n",
        "      <td>33.525178</td>\n",
        "      <td>193.5749</td>\n",
        "      <td>(13, 1)</td>\n",
-       "      <td>727</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1026</th>\n",
        "      <td>201210-1-00</td>\n",
+       "      <td>1026</td>\n",
        "      <td>901.13898</td>\n",
        "      <td>1746.4041</td>\n",
+       "      <td>201210-1</td>\n",
        "      <td>Normal</td>\n",
        "      <td>107.305604</td>\n",
        "      <td>157.9830</td>\n",
        "      <td>(18, 1)</td>\n",
-       "      <td>1026</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1165</th>\n",
        "      <td>201210-1-00</td>\n",
+       "      <td>1165</td>\n",
        "      <td>996.12756</td>\n",
        "      <td>1702.7238</td>\n",
+       "      <td>201210-1</td>\n",
        "      <td>Normal</td>\n",
        "      <td>26.861586</td>\n",
        "      <td>115.9938</td>\n",
        "      <td>(19, 1)</td>\n",
-       "      <td>1165</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1964</th>\n",
        "      <td>201210-1-00</td>\n",
+       "      <td>1964</td>\n",
        "      <td>1542.14120</td>\n",
        "      <td>1475.0056</td>\n",
+       "      <td>201210-1</td>\n",
        "      <td>Normal</td>\n",
        "      <td>15.749470</td>\n",
        "      <td>87.6968</td>\n",
        "      <td>(30, 1)</td>\n",
-       "      <td>1964</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           SpecID  WaveNumber  Absorbance  Status      Widths  Prominences  \\\n",
-       "613   201210-1-00   618.90662   1842.5710  Normal   57.732793     181.9741   \n",
-       "727   201210-1-00   696.81091   1851.9185  Normal   33.525178     193.5749   \n",
-       "1026  201210-1-00   901.13898   1746.4041  Normal  107.305604     157.9830   \n",
-       "1165  201210-1-00   996.12756   1702.7238  Normal   26.861586     115.9938   \n",
-       "1964  201210-1-00  1542.14120   1475.0056  Normal   15.749470      87.6968   \n",
+       "           SpecID   Seq  WaveNumber  Absorbance     SurID  Status      Widths  \\\n",
+       "613   201210-1-00   613   618.90662   1842.5710  201210-1  Normal   57.732793   \n",
+       "727   201210-1-00   727   696.81091   1851.9185  201210-1  Normal   33.525178   \n",
+       "1026  201210-1-00  1026   901.13898   1746.4041  201210-1  Normal  107.305604   \n",
+       "1165  201210-1-00  1165   996.12756   1702.7238  201210-1  Normal   26.861586   \n",
+       "1964  201210-1-00  1964  1542.14120   1475.0056  201210-1  Normal   15.749470   \n",
        "\n",
-       "     GridSlot  Node_ID  \n",
-       "613   (12, 1)      613  \n",
-       "727   (13, 1)      727  \n",
-       "1026  (18, 1)     1026  \n",
-       "1165  (19, 1)     1165  \n",
-       "1964  (30, 1)     1964  "
+       "      Prominences GridSlot  \n",
+       "613      181.9741  (12, 1)  \n",
+       "727      193.5749  (13, 1)  \n",
+       "1026     157.9830  (18, 1)  \n",
+       "1165     115.9938  (19, 1)  \n",
+       "1964      87.6968  (30, 1)  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "peak_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We will use \"Node_ID\" to find distances between peaks later on for our edge construction"
    ]
   },
   {
@@ -540,7 +583,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\stang\\AppData\\Local\\Temp\\ipykernel_7420\\412265839.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_5766/412265839.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -555,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,8 +606,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we join the peak dataframe with itself in order to match peaks within the same Spectra Sample"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -573,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +739,7 @@
        "4  (12, 1)          613         1964  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -699,8 +749,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We then join the dataframe with itself again, this time to match peaks in the same grid slot"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -709,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -825,7 +882,7 @@
        "4  (12, 1)          613        98110  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -835,8 +892,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We the combine these new dataframes together to form our relationship dataframe and we perform some clean to get rid of columns we don't need and renaming columns to get them ready for neo4j"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -845,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -855,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -864,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -874,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -901,59 +965,53 @@
        "      <th>:START_ID</th>\n",
        "      <th>:END_ID</th>\n",
        "      <th>LINK:TYPE</th>\n",
-       "      <th>DIST:float</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>613</td>\n",
+       "      <td>613</td>\n",
+       "      <td>LINK</td>\n",
+       "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>613</td>\n",
        "      <td>727</td>\n",
        "      <td>LINK</td>\n",
-       "      <td>78.463075</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>613</td>\n",
        "      <td>1026</td>\n",
        "      <td>LINK</td>\n",
-       "      <td>298.166359</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>613</td>\n",
        "      <td>1165</td>\n",
        "      <td>LINK</td>\n",
-       "      <td>402.309429</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>613</td>\n",
        "      <td>1964</td>\n",
        "      <td>LINK</td>\n",
-       "      <td>993.713446</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>727</td>\n",
-       "      <td>613</td>\n",
-       "      <td>LINK</td>\n",
-       "      <td>78.463075</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   :START_ID  :END_ID LINK:TYPE  DIST:float\n",
-       "1        613      727      LINK   78.463075\n",
-       "2        613     1026      LINK  298.166359\n",
-       "3        613     1165      LINK  402.309429\n",
-       "4        613     1964      LINK  993.713446\n",
-       "5        727      613      LINK   78.463075"
+       "   :START_ID  :END_ID LINK:TYPE\n",
+       "0        613      613      LINK\n",
+       "1        613      727      LINK\n",
+       "2        613     1026      LINK\n",
+       "3        613     1165      LINK\n",
+       "4        613     1964      LINK"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -963,17 +1021,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 32,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "graph_df = graph_df[graph_df['Node_ID_src'] != graph_df['Node_ID_dst']]"
+    "This gets rid of relationships that match nodes to themselves"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "graph_df = graph_df[graph_df[':START_ID'] != graph_df[':END_ID']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We make use of built in numpy functions to efficiently calculate distances between all of our relationships"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -993,25 +1065,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_5766/3060805488.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  graph_df['DIST'] = dist\n"
+     ]
+    }
+   ],
    "source": [
     "graph_df['DIST'] = dist"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_5766/1874643080.py:1: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  graph_df.rename(columns={'DIST':'DIST:float'}, inplace=True)\n"
+     ]
+    }
+   ],
    "source": [
     "graph_df.rename(columns={'DIST':'DIST:float'}, inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1019,8 +1116,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, we clean and rename columsn in our main node dataframe to get it ready for neo4j"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1130,7 +1234,7 @@
        "1964     15.749470            87.6968  (30, 1)        1964  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1141,7 +1245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1150,7 +1254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1159,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1183,7 +1287,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
