Created archive for old code

--- a/archive/noise_removal_and_peak_engineering.ipynb
+++ b/archive/noise_removal_and_peak_engineering.ipynb
@@ -26,7 +26,16 @@
     "import numpy as np\n",
     "from scipy.signal import savgol_filter\n",
     "from scipy import sparse\n",
-    "from scipy.sparse.linalg import spsolve"
+    "from scipy.sparse.linalg import spsolve\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.ensemble import ExtraTreesClassifier\n",
+    "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from scipy.signal import peak_widths\n",
+    "from scipy.signal import peak_prominences\n",
+    "from scipy.integrate import simps\n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.model_selection import StratifiedKFold"
    ]
   },
   {
@@ -257,6 +266,15 @@
    "source": [
     "sns.lineplot(x=\"WaveNumber\", y='Baseline_Corrected_Absorbance', data=sample)\n",
     "sns.scatterplot(data=sample.iloc[baseline_peaks], x=\"WaveNumber\", y=\"Baseline_Corrected_Absorbance\", color=\"red\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.lineplot(data=spectra_df, x='WaveNumber', y='Baseline_Corrected_Absorbance', hue='Status')"
    ]
   },
   {
