--- a/feature_engineering/cross_val_peak_feature_engineering.ipynb
+++ b/feature_engineering/cross_val_peak_feature_engineering.ipynb
@@ -2254,67 +2254,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_27988/2681882472.py:17: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_27988/2296577023.py:17: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  peaks_df['Bin'] = peaks_df['WaveNumber'].apply(lambda x: calculate_bin_interval(x, bin_size))\n",
-      "/tmp/ipykernel_27988/2681882472.py:34: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
-      "  bins_and_spectrum = peak_bins.merge(wavelength_df.drop(columns='Status'), on='SpecID')\n",
-      "/tmp/ipykernel_27988/2681882472.py:17: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_27988/2296577023.py:17: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  peaks_df['Bin'] = peaks_df['WaveNumber'].apply(lambda x: calculate_bin_interval(x, bin_size))\n",
-      "/tmp/ipykernel_27988/2681882472.py:34: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
-      "  bins_and_spectrum = peak_bins.merge(wavelength_df.drop(columns='Status'), on='SpecID')\n",
-      "/tmp/ipykernel_27988/2681882472.py:17: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_27988/2296577023.py:17: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  peaks_df['Bin'] = peaks_df['WaveNumber'].apply(lambda x: calculate_bin_interval(x, bin_size))\n",
-      "/tmp/ipykernel_27988/2681882472.py:34: PerformanceWarning: DataFrame is highly fragmented.  This is usually the result of calling `frame.insert` many times, which has poor performance.  Consider joining all columns at once using pd.concat(axis=1) instead. To get a de-fragmented frame, use `newframe = frame.copy()`\n",
-      "  bins_and_spectrum = peak_bins.merge(wavelength_df.drop(columns='Status'), on='SpecID')\n",
-      "/tmp/ipykernel_27988/2681882472.py:17: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_27988/2296577023.py:17: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  peaks_df['Bin'] = peaks_df['WaveNumber'].apply(lambda x: calculate_bin_interval(x, bin_size))\n",
-      "/tmp/ipykernel_27988/2681882472.py:17: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_27988/2296577023.py:17: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  peaks_df['Bin'] = peaks_df['WaveNumber'].apply(lambda x: calculate_bin_interval(x, bin_size))\n",
-      "/tmp/ipykernel_27988/2681882472.py:17: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_27988/2296577023.py:17: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  peaks_df['Bin'] = peaks_df['WaveNumber'].apply(lambda x: calculate_bin_interval(x, bin_size))\n",
-      "/tmp/ipykernel_27988/2681882472.py:17: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_27988/2296577023.py:17: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  peaks_df['Bin'] = peaks_df['WaveNumber'].apply(lambda x: calculate_bin_interval(x, bin_size))\n",
-      "/tmp/ipykernel_27988/2681882472.py:17: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_27988/2296577023.py:17: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  peaks_df['Bin'] = peaks_df['WaveNumber'].apply(lambda x: calculate_bin_interval(x, bin_size))\n",
+      "/tmp/ipykernel_27988/2296577023.py:17: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  peaks_df['Bin'] = peaks_df['WaveNumber'].apply(lambda x: calculate_bin_interval(x, bin_size))\n",
+      "/tmp/ipykernel_27988/2296577023.py:17: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  peaks_df['Bin'] = peaks_df['WaveNumber'].apply(lambda x: calculate_bin_interval(x, bin_size))\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "RandomForestClassifier Cross-Validation Accuracy (Bin Size=250): 0.8598 +/- 0.0213\n",
+      "ExtraTreesClassifier Cross-Validation Accuracy (Bin Size=250): 0.8880 +/- 0.0143\n",
+      "RandomForestClassifier Cross-Validation Accuracy (Bin Size=275): 0.8594 +/- 0.0225\n",
+      "ExtraTreesClassifier Cross-Validation Accuracy (Bin Size=275): 0.8867 +/- 0.0179\n",
+      "RandomForestClassifier Cross-Validation Accuracy (Bin Size=300): 0.8604 +/- 0.0221\n",
+      "ExtraTreesClassifier Cross-Validation Accuracy (Bin Size=300): 0.8860 +/- 0.0218\n",
+      "RandomForestClassifier Cross-Validation Accuracy (Bin Size=325): 0.8575 +/- 0.0195\n",
+      "ExtraTreesClassifier Cross-Validation Accuracy (Bin Size=325): 0.8870 +/- 0.0172\n",
+      "RandomForestClassifier Cross-Validation Accuracy (Bin Size=350): 0.8568 +/- 0.0226\n",
+      "ExtraTreesClassifier Cross-Validation Accuracy (Bin Size=350): 0.8841 +/- 0.0211\n",
+      "RandomForestClassifier Cross-Validation Accuracy (Bin Size=375): 0.8571 +/- 0.0222\n",
+      "ExtraTreesClassifier Cross-Validation Accuracy (Bin Size=375): 0.8867 +/- 0.0145\n",
+      "RandomForestClassifier Cross-Validation Accuracy (Bin Size=400): 0.8539 +/- 0.0181\n",
+      "ExtraTreesClassifier Cross-Validation Accuracy (Bin Size=400): 0.8828 +/- 0.0221\n",
+      "RandomForestClassifier Cross-Validation Accuracy (Bin Size=425): 0.8552 +/- 0.0216\n",
+      "ExtraTreesClassifier Cross-Validation Accuracy (Bin Size=425): 0.8828 +/- 0.0212\n",
+      "RandomForestClassifier Cross-Validation Accuracy (Bin Size=450): 0.8601 +/- 0.0196\n",
+      "ExtraTreesClassifier Cross-Validation Accuracy (Bin Size=450): 0.8847 +/- 0.0180\n",
+      "RandomForestClassifier Cross-Validation Accuracy (Bin Size=475): 0.8588 +/- 0.0178\n",
+      "ExtraTreesClassifier Cross-Validation Accuracy (Bin Size=475): 0.8828 +/- 0.0189\n"
      ]
     }
    ],
@@ -2326,7 +2358,7 @@
     "    return f\"{bin_start}-{bin_end}\"\n",
     "\n",
     "# Set the range of bin sizes\n",
-    "bin_sizes_range = range(1, 250, 25)\n",
+    "bin_sizes_range = range(250, 500, 25)\n",
     "\n",
     "# Create a dictionary to store cross-validation results for each bin size\n",
     "cv_results = {}\n",
