--- a/graph_database/community_detection.ipynb
+++ b/graph_database/community_detection.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "SCC = pd.read_csv(\"../../data/SCC.csv\")\n",
+    "#SCC = pd.read_csv(\"../../data/SCC.csv\")\n",
     "Louv = pd.read_csv(\"../../data/Louv.csv\")\n",
     "LabelProp = pd.read_csv(\"../../data/LabelProp.csv\")\n",
     "Leiden = pd.read_csv(\"../../data/Leiden.csv\")\n",
@@ -2932,7 +2932,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
