Commenting and editing graph structure

--- a/graph_database/community_detection.ipynb
+++ b/graph_database/community_detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,23 +15,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#SCC = pd.read_csv(\"../../data/SCC.csv\")\n",
-    "Louv = pd.read_csv(\"../../data/Louv.csv\")\n",
-    "LabelProp = pd.read_csv(\"../../data/LabelProp.csv\")\n",
-    "Leiden = pd.read_csv(\"../../data/Leiden.csv\")\n",
-    "nodes = pd.read_csv(\"../../data/nodes.csv\")\n",
-    "Between = pd.read_csv(\"../../data/Betweeness.csv\")\n",
-    "PageRank = pd.read_csv(\"../../data/PageRank.csv\")\n",
-    "Closeness = pd.read_csv(\"../../data/closeness.csv\")"
+    "SCC = pd.read_csv(\"../../data/Graph_1_5/SCC.csv\")\n",
+    "Louv = pd.read_csv(\"../../data/Graph_1_5/Louv.csv\")\n",
+    "LabelProp = pd.read_csv(\"../../data/Graph_1_5/LabelProp.csv\")\n",
+    "Leiden = pd.read_csv(\"../../data/Graph_1_5/Leiden.csv\")\n",
+    "nodes = pd.read_csv(\"../../data/Graph_1_5/nodes.csv\")\n",
+    "Between = pd.read_csv(\"../../data/Graph_1_5/Betweeness.csv\")\n",
+    "PageRank = pd.read_csv(\"../../data/Graph_1_5/PageRank.csv\")\n",
+    "Closeness = pd.read_csv(\"../../data/Graph_1_5/closeness.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
