--- a/graph_database/graph_baseline_removal.ipynb
+++ b/graph_database/graph_baseline_removal.ipynb
@@ -1545,7 +1545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1554,7 +1554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1565,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1575,7 +1575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1629,7 +1629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -1650,12 +1650,12 @@
     }
    ],
    "source": [
-    "graph = graph(train_df)"
+    "graph = graph(test_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -1688,38 +1688,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>728</td>\n",
-       "      <td>1025</td>\n",
+       "      <td>24239</td>\n",
+       "      <td>24444</td>\n",
        "      <td>LINK</td>\n",
-       "      <td>0.188045</td>\n",
+       "      <td>0.175333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>728</td>\n",
-       "      <td>1368</td>\n",
+       "      <td>24239</td>\n",
+       "      <td>24718</td>\n",
        "      <td>LINK</td>\n",
-       "      <td>0.404973</td>\n",
+       "      <td>0.277198</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>728</td>\n",
-       "      <td>1535</td>\n",
+       "      <td>24239</td>\n",
+       "      <td>24889</td>\n",
        "      <td>LINK</td>\n",
-       "      <td>0.421191</td>\n",
+       "      <td>0.296970</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>728</td>\n",
-       "      <td>1818</td>\n",
+       "      <td>24239</td>\n",
+       "      <td>25103</td>\n",
        "      <td>LINK</td>\n",
-       "      <td>0.453244</td>\n",
+       "      <td>0.442692</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>728</td>\n",
-       "      <td>2103</td>\n",
+       "      <td>24239</td>\n",
+       "      <td>25324</td>\n",
        "      <td>LINK</td>\n",
-       "      <td>0.513372</td>\n",
+       "      <td>0.453947</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1729,63 +1729,63 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5751004</th>\n",
-       "      <td>6888419</td>\n",
-       "      <td>7818562</td>\n",
+       "      <th>414000</th>\n",
+       "      <td>7211644</td>\n",
+       "      <td>5809828</td>\n",
        "      <td>LINK</td>\n",
-       "      <td>0.011083</td>\n",
+       "      <td>0.001940</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5751005</th>\n",
-       "      <td>7157242</td>\n",
-       "      <td>6888419</td>\n",
+       "      <th>414016</th>\n",
+       "      <td>7175571</td>\n",
+       "      <td>7183477</td>\n",
        "      <td>LINK</td>\n",
-       "      <td>0.019077</td>\n",
+       "      <td>0.002186</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5751007</th>\n",
-       "      <td>7157242</td>\n",
-       "      <td>7818562</td>\n",
+       "      <th>414017</th>\n",
+       "      <td>7183477</td>\n",
+       "      <td>7175571</td>\n",
        "      <td>LINK</td>\n",
-       "      <td>0.022666</td>\n",
+       "      <td>0.002186</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5751008</th>\n",
-       "      <td>7818562</td>\n",
-       "      <td>6888419</td>\n",
+       "      <th>414025</th>\n",
+       "      <td>7350647</td>\n",
+       "      <td>7540392</td>\n",
        "      <td>LINK</td>\n",
-       "      <td>0.011083</td>\n",
+       "      <td>0.009080</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5751009</th>\n",
-       "      <td>7818562</td>\n",
-       "      <td>7157242</td>\n",
+       "      <th>414026</th>\n",
+       "      <td>7540392</td>\n",
+       "      <td>7350647</td>\n",
        "      <td>LINK</td>\n",
-       "      <td>0.022666</td>\n",
+       "      <td>0.009080</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5701006 rows × 4 columns</p>\n",
+       "<p>401538 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         :START_ID  :END_ID LINK:TYPE  DIST:float\n",
-       "1              728     1025      LINK    0.188045\n",
-       "2              728     1368      LINK    0.404973\n",
-       "3              728     1535      LINK    0.421191\n",
-       "4              728     1818      LINK    0.453244\n",
-       "5              728     2103      LINK    0.513372\n",
-       "...            ...      ...       ...         ...\n",
-       "5751004    6888419  7818562      LINK    0.011083\n",
-       "5751005    7157242  6888419      LINK    0.019077\n",
-       "5751007    7157242  7818562      LINK    0.022666\n",
-       "5751008    7818562  6888419      LINK    0.011083\n",
-       "5751009    7818562  7157242      LINK    0.022666\n",
+       "        :START_ID  :END_ID LINK:TYPE  DIST:float\n",
+       "1           24239    24444      LINK    0.175333\n",
+       "2           24239    24718      LINK    0.277198\n",
+       "3           24239    24889      LINK    0.296970\n",
+       "4           24239    25103      LINK    0.442692\n",
+       "5           24239    25324      LINK    0.453947\n",
+       "...           ...      ...       ...         ...\n",
+       "414000    7211644  5809828      LINK    0.001940\n",
+       "414016    7175571  7183477      LINK    0.002186\n",
+       "414017    7183477  7175571      LINK    0.002186\n",
+       "414025    7350647  7540392      LINK    0.009080\n",
+       "414026    7540392  7350647      LINK    0.009080\n",
        "\n",
-       "[5701006 rows x 4 columns]"
+       "[401538 rows x 4 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
